<resources>
    <string name="app_name">Pocket Songbook</string>
    <string name="search_hint">Song or performer name</string>

    <string name="menu_item_search">Search</string>

    <string name="message_no_results">Nothing found</string>
    <string name="message_empty_request">Empty search request</string>
    <string name="message_nothing_found">Nothing found</string>

    <string name="error_no_connection">Internet connection error</string>
    <string name="error_failed_to_get_search_results">Failed to get search results</string>
    <string name="error_failed_to_load_song">Failed to load song</string>

    <string name="label_favourites">Favourites</string>

    <string name="song_key_default">key</string>
    <string name="song_font_default">font</string>
    <string name="nav_favourites">Favorites</string>
    <string name="nav_search">Search</string>
    <string name="nav_tuner">Tuner</string>
    <string name="saved_at">Saved at %1$s</string>
    <string name="microphone_permissions_rationale">Microphone access is required for pitch recognition.</string>
    <string name="permission_was_denied">Permission was denied</string>
    <string name="settings">Settings</string>

    <string name="auto_detect_string">Auto detect string</string>
    <string name="enable_tuner">Enable tuner</string>
    <string name="disable_tuner">Disable tuner</string>
</resources>
