<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/songOpenChordsFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/svSongLyrics"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_chord_white" />

    <ScrollView
        android:id="@+id/svSongLyrics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/songChordsCl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/songLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/songHeaderLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:elevation="5dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <ImageView
                    android:id="@+id/songAddToFavouriteIv"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@drawable/ripple_rounded_transparent_background"
                    android:contentDescription="@string/label_favourites"
                    android:scaleType="center"
                    app:layout_constraintBottom_toBottomOf="@+id/tvSongArtist"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvSongTitle"
                    app:srcCompat="@drawable/ic_star_border_white_36dp" />

                <TextView
                    android:id="@+id/tvSongArtist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:singleLine="true"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/songAddToFavouriteIv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSongTitle"
                    tools:text="Artist" />

                <TextView
                    android:id="@+id/tvSongTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/songAddToFavouriteIv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Song Title" />


                <ImageView
                    android:id="@+id/songKeyUpBtn"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ripple_rounded_transparent_background"
                    android:scaleType="center"
                    android:src="@drawable/ic_arrow_up_white_24dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@id/songKeyAmountTv"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSongArtist" />

                <TextView
                    android:id="@+id/songKeyAmountTv"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:foreground="@drawable/ripple_rounded_transparent_background"
                    android:gravity="center"
                    android:minWidth="50dp"
                    android:text="@string/song_key_default"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/songKeyUpBtn"
                    app:layout_constraintEnd_toStartOf="@id/songKeyDownBtn"
                    app:layout_constraintStart_toEndOf="@id/songKeyUpBtn"
                    app:layout_constraintTop_toTopOf="@id/songKeyUpBtn" />

                <ImageView
                    android:id="@+id/songKeyDownBtn"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/ripple_rounded_transparent_background"
                    android:scaleType="center"
                    android:src="@drawable/ic_arrow_down_white_24dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/songKeyAmountTv"
                    app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
                    app:layout_constraintStart_toEndOf="@id/songKeyAmountTv"
                    app:layout_constraintTop_toTopOf="@id/songKeyAmountTv" />


                <ImageView
                    android:id="@+id/songFontMinusBtn"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/ripple_rounded_transparent_background"
                    android:scaleType="center"
                    android:src="@drawable/ic_minus_white_24dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@id/songFontSizeTv"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toEndOf="@id/guidelineCenter"
                    app:layout_constraintTop_toTopOf="@id/songKeyUpBtn" />

                <TextView
                    android:id="@+id/songFontSizeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:foreground="@drawable/ripple_rounded_transparent_background"
                    android:gravity="center"
                    android:minWidth="60dp"
                    android:text="@string/song_font_default"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/songFontMinusBtn"
                    app:layout_constraintEnd_toStartOf="@id/songFontPlusBtn"
                    app:layout_constraintStart_toEndOf="@id/songFontMinusBtn"
                    app:layout_constraintTop_toTopOf="@id/songFontMinusBtn" />

                <ImageView
                    android:id="@+id/songFontPlusBtn"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_rounded_transparent_background"
                    android:scaleType="center"
                    android:src="@drawable/ic_plus_white_24dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/songFontMinusBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/songFontSizeTv"
                    app:layout_constraintTop_toTopOf="@id/songFontMinusBtn" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/songLyricsTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:paddingLeft="8dp"
                android:paddingTop="16dp"
                android:paddingRight="8dp"
                android:paddingBottom="32dp"
                android:textSize="16sp"
                tools:text="lyrics" />
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/songChordsCl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/songChordsRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <SeekBar
        android:id="@+id/songScrollSb"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="42dp"
        android:alpha="0.3"
        android:max="30"
        android:progress="0"
        android:rotation="90"
        app:layout_constraintBottom_toTopOf="@id/songChordsCl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/svSongLyrics"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>